# tallyhawk

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml
src/: error.rs  lib.rs  main.rs  types.rs
src/commands/: count.rs
src/stats/: counter.rs  file_types.rs  mod.rs
src/utils/: output.rs
