[package]
name = "tallyhawk"
version = "0.1.0"
edition = "2021"
authors = ["Willem-Jaap <your.email@example.com>"]
description = "A sharp-eyed CLI tool for gathering project statistics"
license = "MIT"
repository = "https://github.com/Willem-Jaap/tallyhawk"
homepage = "https://github.com/Willem-Jaap/tallyhawk"
keywords = ["cli", "statistics", "code-analysis", "project-metrics"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "tallyhawk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
colored = "3.0.0"
ignore = "0.4.23"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
walkdir = "2.5.0"
